--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,375 @@
-@import "./theme/main.css";
+@import "./theme/main.css" layer(base);
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  --breakpoint-*: initial;
+  --breakpoint-2xs: 360px;
+  --breakpoint-xs: 480px;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1640px;
+
+  --ease-ease: ease;
+  --ease-in-out-quart: cubic-bezier(0.77, 0, 0.175, 1);
+  --ease-in-out-expo: cubic-bezier(1, 0, 0, 1);
+  --ease-in-expo: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+  --ease-snappy-out: cubic-bezier(0.19, 1, 0.22, 1);
+
+  --border-width-3: 3px;
+  --border-width-5: 5px;
+
+  --height-base-input-size-1: var(--base-input-size-1-height);
+  --height-base-input-size-2: var(--base-input-size-2-height);
+  --height-base-input-size-3: var(--base-input-size-3-height);
+  --height-base-input-size-4: var(--base-input-size-4-height);
+  --height-base-toggle-size-1: var(--base-toggle-size-1-height);
+  --height-base-toggle-size-2: var(--base-toggle-size-2-height);
+  --height-base-toggle-size-3: var(--base-toggle-size-3-height);
+  --height-base-toggle-size-4: var(--base-toggle-size-4-height);
+  --height-base-button-size-1: var(--base-button-size-1-height);
+  --height-base-button-size-2: var(--base-button-size-2-height);
+  --height-base-button-size-3: var(--base-button-size-3-height);
+  --height-base-button-size-4: var(--base-button-size-4-height);
+
+  --width-base-toggle-size-1: var(--base-toggle-size-1-height);
+  --width-base-toggle-size-2: var(--base-toggle-size-2-height);
+  --width-base-toggle-size-3: var(--base-toggle-size-3-height);
+  --width-base-toggle-size-4: var(--base-toggle-size-4-height);
+
+  --ring-width-3: 3px;
+  --ring-width-5: 5px;
+
+  --ring-offset-width-3: 3px;
+  --ring-offset-width-5: 5px;
+  --ring-offset-width-6: 6px;
+  --ring-offset-width-10: 10px;
+
+  --outline-offset--2: -2px;
+  --outline-offset--1: -1px;
+
+  --outline-offset-1_5: 1.5px;
+
+  --radius-none: var(--radius-none);
+  --radius-xs: var(--radius-xs);
+  --radius-sm: var(--radius-sm);
+  --radius-md: var(--radius-md);
+  --radius-lg: var(--radius-lg);
+  --radius-xl: var(--radius-xl);
+  --radius-2xl: var(--radius-2xl);
+  --radius-3xl: var(--radius-3xl);
+  --radius-full: var(--radius-full);
+
+  --text-1: var(--font-size-1);
+  --text-2: var(--font-size-2);
+  --text-3: var(--font-size-3);
+  --text-4: var(--font-size-4);
+  --text-5: var(--font-size-5);
+  --text-6: var(--font-size-6);
+  --text-7: var(--font-size-7);
+  --text-8: var(--font-size-8);
+  --text-9: var(--font-size-9);
+
+  --leading-1: var(--line-height-1);
+  --leading-2: var(--line-height-2);
+  --leading-3: var(--line-height-3);
+  --leading-4: var(--line-height-4);
+  --leading-5: var(--line-height-5);
+  --leading-6: var(--line-height-6);
+  --leading-7: var(--line-height-7);
+  --leading-8: var(--line-height-8);
+  --leading-9: var(--line-height-9);
+
+  --tracking-1: var(--letter-spacing-1);
+  --tracking-2: var(--letter-spacing-2);
+  --tracking-3: var(--letter-spacing-3);
+  --tracking-4: var(--letter-spacing-4);
+  --tracking-5: var(--letter-spacing-5);
+  --tracking-6: var(--letter-spacing-6);
+  --tracking-7: var(--letter-spacing-7);
+  --tracking-8: var(--letter-spacing-8);
+  --tracking-9: var(--letter-spacing-9);
+
+  --font-sans: var(
+    --font-geist-sans,
+    ui-sans-serif,
+    system-ui,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji"
+  );
+  --font-serif: var(
+    --font-serif,
+    ui-serif,
+    Georgia,
+    Cambria,
+    "Times New Roman",
+    Times,
+    serif
+  );
+  --font-mono: var(--font-geist-mono);
+
+  --color-primary-1: var(--primary-1);
+  --color-primary-2: var(--primary-2);
+  --color-primary-3: var(--primary-3);
+  --color-primary-4: var(--primary-4);
+  --color-primary-5: var(--primary-5);
+  --color-primary-6: var(--primary-6);
+  --color-primary-7: var(--primary-7);
+  --color-primary-8: var(--primary-8);
+  --color-primary-9: var(--primary-9);
+  --color-primary-10: var(--primary-10);
+  --color-primary-11: var(--primary-11);
+  --color-primary-12: var(--primary-12);
+  --color-primary-a1: var(--primary-a1);
+  --color-primary-a2: var(--primary-a2);
+  --color-primary-a3: var(--primary-a3);
+  --color-primary-a4: var(--primary-a4);
+  --color-primary-a5: var(--primary-a5);
+  --color-primary-a6: var(--primary-a6);
+  --color-primary-a7: var(--primary-a7);
+  --color-primary-a8: var(--primary-a8);
+  --color-primary-a9: var(--primary-a9);
+  --color-primary-a10: var(--primary-a10);
+  --color-primary-a11: var(--primary-a11);
+  --color-primary-a12: var(--primary-a12);
+  --color-primary-contrast: var(--primary-contrast);
+  --color-primary-surface: var(--primary-surface);
+  --color-primary-indicator: var(--primary-indicator);
+  --color-primary-track: var(--primary-track);
+  --color-primary: var(--primary-9);
+  --color-primary-foreground: var(--primary-12);
+
+  --color-secondary-1: var(--secondary-1);
+  --color-secondary-2: var(--secondary-2);
+  --color-secondary-3: var(--secondary-3);
+  --color-secondary-4: var(--secondary-4);
+  --color-secondary-5: var(--secondary-5);
+  --color-secondary-6: var(--secondary-6);
+  --color-secondary-7: var(--secondary-7);
+  --color-secondary-8: var(--secondary-8);
+  --color-secondary-9: var(--secondary-9);
+  --color-secondary-10: var(--secondary-10);
+  --color-secondary-11: var(--secondary-11);
+  --color-secondary-12: var(--secondary-12);
+  --color-secondary-a1: var(--secondary-a1);
+  --color-secondary-a2: var(--secondary-a2);
+  --color-secondary-a3: var(--secondary-a3);
+  --color-secondary-a4: var(--secondary-a4);
+  --color-secondary-a5: var(--secondary-a5);
+  --color-secondary-a6: var(--secondary-a6);
+  --color-secondary-a7: var(--secondary-a7);
+  --color-secondary-a8: var(--secondary-a8);
+  --color-secondary-a9: var(--secondary-a9);
+  --color-secondary-a10: var(--secondary-a10);
+  --color-secondary-a11: var(--secondary-a11);
+  --color-secondary-a12: var(--secondary-a12);
+  --color-secondary-contrast: var(--secondary-contrast);
+  --color-secondary-surface: var(--secondary-surface);
+  --color-secondary-indicator: var(--secondary-indicator);
+  --color-secondary-track: var(--secondary-track);
+  --color-secondary: var(--secondary-9);
+  --color-secondary-foreground: var(--secondary-12);
+
+  --color-surface-1: var(--surface-1);
+  --color-surface-2: var(--surface-2);
+  --color-surface-3: var(--surface-3);
+  --color-surface-4: var(--surface-4);
+  --color-surface-5: var(--surface-5);
+  --color-surface-6: var(--surface-6);
+  --color-surface-7: var(--surface-7);
+  --color-surface-8: var(--surface-8);
+  --color-surface-9: var(--surface-9);
+  --color-surface-10: var(--surface-10);
+  --color-surface-11: var(--surface-11);
+  --color-surface-12: var(--surface-12);
+  --color-surface-a1: var(--surface-a1);
+  --color-surface-a2: var(--surface-a2);
+  --color-surface-a3: var(--surface-a3);
+  --color-surface-a4: var(--surface-a4);
+  --color-surface-a5: var(--surface-a5);
+  --color-surface-a6: var(--surface-a6);
+  --color-surface-a7: var(--surface-a7);
+  --color-surface-a8: var(--surface-a8);
+  --color-surface-a9: var(--surface-a9);
+  --color-surface-a10: var(--surface-a10);
+  --color-surface-a11: var(--surface-a11);
+  --color-surface-a12: var(--surface-a12);
+  --color-surface-contrast: var(--surface-contrast);
+  --color-surface-surface: var(--surface-surface);
+  --color-surface-indicator: var(--surface-indicator);
+  --color-surface-track: var(--surface-track);
+  --color-surface: var(--surface-9);
+  --color-surface-backdrop: var(--surface-backdrop);
+
+  --color-info-1: var(--info-1);
+  --color-info-2: var(--info-2);
+  --color-info-3: var(--info-3);
+  --color-info-4: var(--info-4);
+  --color-info-5: var(--info-5);
+  --color-info-6: var(--info-6);
+  --color-info-7: var(--info-7);
+  --color-info-8: var(--info-8);
+  --color-info-9: var(--info-9);
+  --color-info-10: var(--info-10);
+  --color-info-11: var(--info-11);
+  --color-info-12: var(--info-12);
+  --color-info-a1: var(--info-a1);
+  --color-info-a2: var(--info-a2);
+  --color-info-a3: var(--info-a3);
+  --color-info-a4: var(--info-a4);
+  --color-info-a5: var(--info-a5);
+  --color-info-a6: var(--info-a6);
+  --color-info-a7: var(--info-a7);
+  --color-info-a8: var(--info-a8);
+  --color-info-a9: var(--info-a9);
+  --color-info-a10: var(--info-a10);
+  --color-info-a11: var(--info-a11);
+  --color-info-a12: var(--info-a12);
+  --color-info-contrast: var(--info-contrast);
+  --color-info-surface: var(--info-surface);
+  --color-info-indicator: var(--info-indicator);
+  --color-info-track: var(--info-track);
+
+  --color-success-1: var(--success-1);
+  --color-success-2: var(--success-2);
+  --color-success-3: var(--success-3);
+  --color-success-4: var(--success-4);
+  --color-success-5: var(--success-5);
+  --color-success-6: var(--success-6);
+  --color-success-7: var(--success-7);
+  --color-success-8: var(--success-8);
+  --color-success-9: var(--success-9);
+  --color-success-10: var(--success-10);
+  --color-success-11: var(--success-11);
+  --color-success-12: var(--success-12);
+  --color-success-a1: var(--success-a1);
+  --color-success-a2: var(--success-a2);
+  --color-success-a3: var(--success-a3);
+  --color-success-a4: var(--success-a4);
+  --color-success-a5: var(--success-a5);
+  --color-success-a6: var(--success-a6);
+  --color-success-a7: var(--success-a7);
+  --color-success-a8: var(--success-a8);
+  --color-success-a9: var(--success-a9);
+  --color-success-a10: var(--success-a10);
+  --color-success-a11: var(--success-a11);
+  --color-success-a12: var(--success-a12);
+  --color-success-contrast: var(--success-contrast);
+  --color-success-surface: var(--success-surface);
+  --color-success-indicator: var(--success-indicator);
+  --color-success-track: var(--success-track);
+
+  --color-danger-1: var(--danger-1);
+  --color-danger-2: var(--danger-2);
+  --color-danger-3: var(--danger-3);
+  --color-danger-4: var(--danger-4);
+  --color-danger-5: var(--danger-5);
+  --color-danger-6: var(--danger-6);
+  --color-danger-7: var(--danger-7);
+  --color-danger-8: var(--danger-8);
+  --color-danger-9: var(--danger-9);
+  --color-danger-10: var(--danger-10);
+  --color-danger-11: var(--danger-11);
+  --color-danger-12: var(--danger-12);
+  --color-danger-a1: var(--danger-a1);
+  --color-danger-a2: var(--danger-a2);
+  --color-danger-a3: var(--danger-a3);
+  --color-danger-a4: var(--danger-a4);
+  --color-danger-a5: var(--danger-a5);
+  --color-danger-a6: var(--danger-a6);
+  --color-danger-a7: var(--danger-a7);
+  --color-danger-a8: var(--danger-a8);
+  --color-danger-a9: var(--danger-a9);
+  --color-danger-a10: var(--danger-a10);
+  --color-danger-a11: var(--danger-a11);
+  --color-danger-a12: var(--danger-a12);
+  --color-danger-contrast: var(--danger-contrast);
+  --color-danger-surface: var(--danger-surface);
+  --color-danger-indicator: var(--danger-indicator);
+  --color-danger-track: var(--danger-track);
+
+  --color-warning-1: var(--warning-1);
+  --color-warning-2: var(--warning-2);
+  --color-warning-3: var(--warning-3);
+  --color-warning-4: var(--warning-4);
+  --color-warning-5: var(--warning-5);
+  --color-warning-6: var(--warning-6);
+  --color-warning-7: var(--warning-7);
+  --color-warning-8: var(--warning-8);
+  --color-warning-9: var(--warning-9);
+  --color-warning-10: var(--warning-10);
+  --color-warning-11: var(--warning-11);
+  --color-warning-12: var(--warning-12);
+  --color-warning-a1: var(--warning-a1);
+  --color-warning-a2: var(--warning-a2);
+  --color-warning-a3: var(--warning-a3);
+  --color-warning-a4: var(--warning-a4);
+  --color-warning-a5: var(--warning-a5);
+  --color-warning-a6: var(--warning-a6);
+  --color-warning-a7: var(--warning-a7);
+  --color-warning-a8: var(--warning-a8);
+  --color-warning-a9: var(--warning-a9);
+  --color-warning-a10: var(--warning-a10);
+  --color-warning-a11: var(--warning-a11);
+  --color-warning-a12: var(--warning-a12);
+  --color-warning-contrast: var(--warning-contrast);
+  --color-warning-surface: var(--warning-surface);
+  --color-warning-indicator: var(--warning-indicator);
+  --color-warning-track: var(--warning-track);
+
+  --color-black-a1: var(--black-a1);
+  --color-black-a2: var(--black-a2);
+  --color-black-a3: var(--black-a3);
+  --color-black-a4: var(--black-a4);
+  --color-black-a5: var(--black-a5);
+  --color-black-a6: var(--black-a6);
+  --color-black-a7: var(--black-a7);
+  --color-black-a8: var(--black-a8);
+  --color-black-a9: var(--black-a9);
+  --color-black-a10: var(--black-a10);
+  --color-black-a11: var(--black-a11);
+  --color-black-a12: var(--black-a12);
+
+  --color-white-a1: var(--white-a1);
+  --color-white-a2: var(--white-a2);
+  --color-white-a3: var(--white-a3);
+  --color-white-a4: var(--white-a4);
+  --color-white-a5: var(--white-a5);
+  --color-white-a6: var(--white-a6);
+  --color-white-a7: var(--white-a7);
+  --color-white-a8: var(--white-a8);
+  --color-white-a9: var(--white-a9);
+  --color-white-a10: var(--white-a10);
+  --color-white-a11: var(--white-a11);
+  --color-white-a12: var(--white-a12);
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 2rem;
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentColor);
+  }
+}
